argocd/media/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: "/config"
          name: radarr-config
        - mountPath: "/mnt/media"
          name: media-nfs
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: media-nfs
          persistentVolumeClaim:
            claimName: media-nfs-pvc
