argocd/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: radarr-svc
  namespace: media
spec:
  selector:    
    app: radarr
  type: ClusterIP
  ports:  
  - name: http
    port: 7878
    targetPort: 7878
    protocol: TCP
